src/objects/Bin_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Astrum_Application__c</fullName>
        <inlineHelpText>Astrum Application configuration belongs to</inlineHelpText>
        <label>Astrum Application</label>
        <referenceTo>Astrum_Application__c</referenceTo>
        <relationshipLabel>Bin Configuration</relationshipLabel>
        <relationshipName>Bin_Configuration</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Bin_Column_Width__c</fullName>
        <label>Bin Column Width</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bin_Grouping_Name__c</fullName>
        <inlineHelpText>Grouping of Bin</inlineHelpText>
        <label>Bin Grouping Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bin_Grouping_Order__c</fullName>
        <inlineHelpText>Order of Bin Grouping</inlineHelpText>
        <label>Bin Grouping Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bin_Order__c</fullName>
        <inlineHelpText>Order of Bin within Grouping</inlineHelpText>
        <label>Bin Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bin__c</fullName>
        <description>Astrum PM Bin</description>
        <label>Bin</label>
        <picklist>
            <picklistValues>
                <fullName>Kickoff Photos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed Conduit Run and Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drivers Licenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install Prep Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ SREC Docs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permit Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Permit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Permit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility Interconnect Part 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Notice to Construct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grant Reservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOA Submitted Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice at Start of Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Equip. Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation Photos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel and Inverter Serial Numbers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pull List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunpower Warranty Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enphase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Completion Forms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proof of Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Subst. Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility Interconnect Part 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grant Completion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SREC Docs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submit Utility Interconnect Part 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Utility Interconnect Part 1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <inlineHelpText>Field name to update</inlineHelpText>
        <label>Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installer_Electrician_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Installer/Electrician Access</label>
        <type>Checkbox</type>
    </fields>
    <label>Bin Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Bin__c</columns>
        <columns>Bin_Column_Width__c</columns>
        <columns>Bin_Grouping_Name__c</columns>
        <columns>Bin_Grouping_Order__c</columns>
        <columns>Bin_Order__c</columns>
        <columns>Field_Name__c</columns>
        <columns>Installer_Electrician_Access__c</columns>
        <columns>Astrum_Application__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BC-{00000}</displayFormat>
        <label>Bin Configuration ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bin Configuration</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>